Remove System.out.println calls